made adaptive, changed the font, added thumbs pointers, changed the rendering of the month array, added logic for solving the problem of years overflow, corrected incorrect type assignments, moved the business logic to a separate dateUtils file.

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,17 +1,8 @@
 @font-face {
-  font-family: "Roboto-Regular";
-  font-weight: 400;
-  font-style: normal;
-  src: url("@/assets/fonts/Roboto-Regular.woff2") format("woff2"),
-    url("@/assets/fonts/Roboto-Regular.woff") format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Roboto-Regular";
+  font-family: "Raleway-Bold";
   font-weight: 700;
   font-style: normal;
-  src: url("@/assets/fonts/Roboto-Bold.woff2") format("woff2"),
-    url("@/assets/fonts/Roboto-Bold.woff") format("woff");
+  src: url("@/assets/fonts/Raleway-Bold.woff2") format("woff2"),
+    url("@/assets/fonts/Raleway-Bold.woff") format("woff");
   font-display: swap;
 }
