--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,7 +1,8 @@
-p {
-  font-family: "Roboto-Regular", sans-serif;
-  color: #2b80bf;
+p,
+button {
+  font-family: "Raleway-Bold", sans-serif;
+  color: #1672b7;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 17px;
 }
